cor do link cadastro

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a class="links" href="#fotos">Fotos</a>
         <a class="links" href="#galeria">Vídeos</a>
         <a class="links" href="./fale-conosco.html">Contato</a>
-        <a class="links" href="./ficha-matricula.html">Faça parte</a>
+        <a class="links" id="matricula" href="./ficha-matricula.html">Faça parte</a>
         <a class="links" href="./apoio.html">Colaborações</a>
       </nav>
     </div>
